--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                {/* 選單項目 */}
                <button onClick={()=>{setCurrentView('home');setMenuOpen(false)}} 
                  className={`w-full text-left px-4 py-3 rounded-xl font-bold flex items-center gap-3 transition ${currentView==='home' ? 'bg-blue-50 text-blue-600' : 'text-slate-600 hover:bg-slate-50'}`}>
-                 <i className="fas fa-pen-nib w-6 text-center"></i> 填寫表單 (首頁)
+                 <i className="fas fa-pen-nib w-6 text-center"></i> 首頁
                </button>
                
                <button onClick={()=>{setCurrentView('docs');setMenuOpen(false)}} 
