--- a/index.html
+++ b/index.html
@@ -101,22 +101,46 @@
       );
     };
 
-    const RecordItem = memo(({ r, onSelect, onDelete }) => (
-      <div onClick={() => onSelect(r)} className="bg-white p-4 rounded-2xl border border-slate-100 shadow-sm active:bg-slate-50 transition cursor-pointer relative">
-         <div className="flex justify-between items-start mb-1">
-            <span className="font-mono font-bold text-blue-600 text-lg">#{r.number}</span>
-            <div className="text-xs text-slate-400">{r.date.replace(/-/g, '/')}</div>
-         </div>
-         <div className="text-base font-bold text-slate-800 mb-2 line-clamp-1">{r.subject}</div>
-         <div className="flex items-center gap-2 text-xs text-slate-500">
-             <span className="bg-slate-100 px-2 py-1 rounded font-medium">{r.author}</span>
-             {r.docType !== '一般公文' && <span className="bg-indigo-50 text-indigo-600 px-2 py-1 rounded font-bold">{r.docType} {r.subNumber}</span>}
-             <div className="ml-auto flex gap-2">
-                 <button onClick={(e) => { e.stopPropagation(); onDelete(r.id); }} className="w-8 h-8 flex items-center justify-center bg-red-50 text-red-500 rounded"><i className="fas fa-trash-alt"></i></button>
-             </div>
-         </div>
-      </div>
-    ));
+    const RecordItem = memo(({ r, onSelect, onDelete }) => {
+      const copyToClipboard = (e) => {
+         e.stopPropagation();
+         const date = new Date(r.date);
+         const dateText = `${date.getMonth() + 1}/${date.getDate()}`;
+         const numSuffix = r.number ? r.number.slice(-3) : "000";
+         const text = `${dateText}${r.code}${numSuffix}號：${r.subject}`;
+         
+         // iOS 兼容性複製
+         const textArea = document.createElement("textarea");
+         textArea.value = text;
+         document.body.appendChild(textArea);
+         textArea.select();
+         try {
+           document.execCommand('copy');
+           alert("已複製：\n" + text);
+         } catch (err) {
+           console.error('複製失敗', err);
+         }
+         document.body.removeChild(textArea);
+      };
+
+      return (
+        <div onClick={() => onSelect(r)} className="bg-white p-4 rounded-2xl border border-slate-100 shadow-sm active:bg-slate-50 transition cursor-pointer relative">
+           <div className="flex justify-between items-start mb-1">
+              <span className="font-mono font-bold text-blue-600 text-lg">#{r.number}</span>
+              <div className="text-xs text-slate-400">{r.date.replace(/-/g, '/')}</div>
+           </div>
+           <div className="text-base font-bold text-slate-800 mb-2 line-clamp-1">{r.subject}</div>
+           <div className="flex items-center gap-2 text-xs text-slate-500">
+               <span className="bg-slate-100 px-2 py-1 rounded font-medium">{r.author}</span>
+               {r.docType !== '一般公文' && <span className="bg-indigo-50 text-indigo-600 px-2 py-1 rounded font-bold">{r.docType} {r.subNumber}</span>}
+               <div className="ml-auto flex gap-2">
+                   <button onClick={copyToClipboard} className="w-8 h-8 flex items-center justify-center bg-emerald-50 text-emerald-600 rounded"><i className="fas fa-copy"></i></button>
+                   <button onClick={(e) => { e.stopPropagation(); onDelete(r.id); }} className="w-8 h-8 flex items-center justify-center bg-red-50 text-red-500 rounded"><i className="fas fa-trash-alt"></i></button>
+               </div>
+           </div>
+        </div>
+      );
+    });
 
     const TaskItem = memo(({ t, onClick, onCloseCase, onDelete }) => {
         const [translateX, setTranslateX] = useState(0);
